--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.5.2",
-    "axios": "^0.23.0",
+    "axios": "^1.13.2",
     "formik": "^2.2.9",
-    "json-server": "^0.16.0",
-    "json-server-auth": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -42,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.3",
+    "json-server-auth": "^2.1.0"
   }
 }
